<resources>
    <string name="app_name">LoveInLog</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">分享</string>
    <string name="action_refresh">刷新</string>
    <string name="action_login">登录</string>
    <string name="action_close">关闭</string>
    <string name="action_sign">注册</string>
    <string name="facebook_app_id">1266254913438718</string>


    <string name="umeng_update_content">版本号：6.1.1\n1.debug模式增加了更多工程配置的检测\n2.核心包进行了又一次的压缩\n3.微信精简版进行了又一次的压缩\n4.增加了图片打水印的功能\n5.为用户提供了文字图片合成的功能\n7.提供了图片合成的功能</string>
    <string name="umeng_home_title">U-Share产品Demo</string>
    <string name="umeng_home_update">新版更新内容</string>
    <string name="umeng_share_title">分享</string>
    <string name="umeng_auth_title">授权</string>
    <string name="umeng_delauth_title">删除授权</string>
    <string name="umeng_getinfo_title">获取用户信息</string>
    <string name="umeng_check_title">自检工具</string>
    <string name="umeng_menu_title">分享菜单模板</string>

    <string name="umeng_check_sign">检查签名</string>
    <string name="umeng_check_sina">检查新浪</string>
    <string name="umeng_check_wx">检查微信</string>
    <string name="umeng_check_alipay">检查支付宝</string>
    <string name="umeng_check_qq">检查qq</string>
    <string name="umeng_check_fb">检查facebook</string>
    <string name="umeng_choose_style">选择分享类型</string>

    <string name="umeng_sharebutton_custom">自定义分享按钮</string>

    <string name="change_daynight">切换主题</string>
    <string name="main_menu_changetheme_day">夜间模式</string>
    <string name="main_menu_changetheme_night">日间模式</string>
    <string name="search_text_empty_tips">请先输入搜索信息^_-!</string>
</resources>
